2008-12-21  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.6 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.5.6 release.

2008-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/combobox.tcl: [Bug 1939129,1991930] combobox dropdown
	                            was drawn behind topmost toplevels.

2008-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImage.c    Relax the constraint that every Tk_ImageType
	* generic/tkImgPhoto.c can only be passed to this function once.
	                       This allows tkImg to be loaded in multiple
	                       interpreters in a thread-enabled build of Tk.
	                       [Bug 2312027]

2008-11-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tk.h:        The tip 125 implementation permits the
	* generic/tkFrame.c:   wm manage command to manage any widget but
	* macosx/tkMacOSXWm.c: only those with Frame instance data should
	* unix/tkUnixWm.c:     be permitted. We now check for the suitability
	* win/tkWinWm.c:       and raise an error for non-frame widgets.
	* test/wm.test:        Updated the tests and documentation.
	* doc/wm.n:            See also [Bug 2239034]

2008-11-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/constraints.tcl: backported listbox test fix from head
	* tests/listbox.test:    the default on windows is 'underline'
	* tests/winDialog.test: backported some fixes from head
	* library/text.tcl: Backported fix for bug #1777362 to have events
	* test/text.test:   work with window paths that include hyphens.

2008-10-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump version number to 8.5.6b1 to distinguish
	* library/tk.tcl:	CVS development snapshots from the 8.5.5 and
	* unix/configure.in:	8.5.6 releases.
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
